# whisper.cpp-cli

./: .gitignore  CMakeLists.txt  LICENSE  README.md  hatch_build.py  pyproject.toml  requirements-dev.txt  setup.py
.github/workflows/: wheels.yml  workflow.yml
whisper_cpp/: __main__.py
