[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whisper.cpp-cli"
version = "0.0.2"
description = "A Python package for the whisper.cpp CLI."
authors = [{ name = "Charlie Marsh", email = "charlie.r.marsh@gmail.com" }]
readme = "README.md"
requires-python = ">=3.7"
license = { file = "LICENSE" }
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ["whisper_cpp"]

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I", "B", "UP"]

[tool.cibuildwheel]
test-command = [
    "whisper-cpp -h",
    "python -m whisper_cpp -h",
]

[[tool.cibuildwheel.overrides]]
select = "*-macosx_x86_64"
environment.MACOSX_DEPLOYMENT_TARGET = "10.12"

[[tool.cibuildwheel.overrides]]
select = "*-macosx_arm64"
environment.MACOSX_DEPLOYMENT_TARGET = "11.0"
